--- a/package.json
+++ b/package.json
@@ -8,7 +8,19 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
-  },
+  },"codegenConfig": {
+     "name": "AppSpecs",
+     "type": "modules",
+     "jsSrcsDir": "specs",
+     "android": {
+       "javaPackageName": "com.sampleapp.specs"
+     },
+     "ios": {
+        "modulesProvider": {
+          "NativeSampleModule":  "NativeSampleModuleProvider"
+        }
+     }
+   },
   "dependencies": {
     "react": "19.1.0",
     "react-native": "0.80.0",
